<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/myOrange"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"
        >


        <ImageView
            android:layout_width="150dp"
            android:layout_height="160dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="180dp"
            android:src="@drawable/ic_baseline_wb_sunny_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="5dp"
                android:text="@string/clear"
                android:textStyle="bold"

                android:textSize="50dp"></TextView>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginTop=""

                android:text="30 C"
                android:textSize="35sp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop=""

                android:text="@string/feels_like_28_c"
                android:textSize="40sp"></TextView>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15sp">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:src="@drawable/ic_baseline_network_check_24"
                    android:padding="5sp">

                </ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:text="@string/pressure1"
                        android:textStyle="bold"
                        android:textSize="30sp"


                        android:padding="2sp">

                    </TextView>
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="250Hpa"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:gravity="center"

                        android:padding="2sp">

                    </TextView>



                </LinearLayout>


            </LinearLayout>



        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:src="@drawable/ic_baseline_wifi_24"
                    android:padding="5sp">

                </ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"

                        android:text="@string/wind"
                        android:textStyle="bold"
                        android:textSize="30sp"


                        android:padding="2sp">

                    </TextView>
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="35m/s"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:gravity="center"

                        android:padding="2sp">

                    </TextView>



                </LinearLayout>


            </LinearLayout>



        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:src="@drawable/ic_baseline_arrow_upward_24"
                    android:padding="5sp">

                </ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:text="@string/sunrise"

                        android:textStyle="bold"
                        android:textSize="30sp"


                        android:padding="2sp">

                    </TextView>
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="5:35am"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:gravity="center"

                        android:padding="2sp">

                    </TextView>



                </LinearLayout>


            </LinearLayout>



        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15sp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:src="@drawable/ic_baseline_arrow_downward_24"
                    android:padding="5sp">

                </ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:text="@string/sunset"
                        android:textStyle="bold"
                        android:textSize="30sp"


                        android:padding="2sp">

                    </TextView>
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="5:35pm"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:gravity="center"

                        android:padding="2sp">

                    </TextView>



                </LinearLayout>


            </LinearLayout>



        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="20sp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:src="@drawable/ic_baseline_cloud_24"
                    android:padding="5sp">

                </ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:text="@string/clouds"
                        android:textStyle="bold"
                        android:textSize="30sp"


                        android:padding="2sp">

                    </TextView>
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="Scatteres"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:gravity="center"

                        android:padding="2sp">

                    </TextView>



                </LinearLayout>


            </LinearLayout>



        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:src="@drawable/ic_baseline_invert_colors_24"
                    android:padding="5sp">

                </ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:text="@string/humidity"
                        android:textStyle="bold"
                        android:textSize="30sp"


                        android:padding="2sp">

                    </TextView>
                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="45 %"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:gravity="center"

                        android:padding="2sp">

                    </TextView>



                </LinearLayout>


            </LinearLayout>



        </androidx.cardview.widget.CardView>
    </LinearLayout>


</LinearLayout>